@@ -112,6 +112,7 @@ $Id$
 + [interface] Added charts to status tab, profiling page and query results
 + [interface] AJAXification on various pages 
 - [core] Remove last remaining parts of profiling code which was removed in 2006.
+- bug #3042665 [parser] Add workaround for MySQL way of handling backtick.
 
 3.3.7.0 (not yet released)
 - patch #3050492 [PDF scratchboard] Cannot drag table box to the edge after
